--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
 
   snapshot-backup:
-    build: blacklabelops/rsnapshot:latest
+    build: blacklabelops/rsnapshot
       context:
       args: 
         -directorio_backups: /root/data-backup
