mapping issue Variable : por =

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   snapshot-backup:
     build: blacklabelops/rsnapshot
       args: 
-        - directorio_backups: /root/data-backup
+        - directorio_backups=/root/data-backup
     ports:
       - "22"
     volumes:
