--- a/rsnapshot.config
+++ b/rsnapshot.config
@@ -49,8 +49,7 @@ cmd_rm		/bin/rm
 cmd_rsync	/usr/bin/rsync
 
 # Uncomment this to enable remote ssh backups over rsync.
-#
-cmd_ssh	/usr/bin/ssh
+#cmd_ssh	/usr/bin/ssh
 
 # Comment this out to disable syslog support.
 #
@@ -249,6 +248,6 @@ lockfile	/var/run/rsnapshot.pid
 #backup	rsync://rsync.samba.org/rsyncftp/	rsync.samba.org/rsyncftp/
 
 
-
+cmd_ssh	/usr/bin/ssh
 backup	root@164.90.182.3:/home/debian/samba        snapshot/
 retain weekly 4
