aver si asi funciona vale verga

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     volumes: 
       - /root/data-backup:/snapshot
       - /root/.ssh:/root/.ssh
-   
+    environment: 
+      - BACKUP_DIRECTORIES= root@164.90.182.3:/home/debian/   samba/snapshot
   visualizer:
     image: dockersamples/visualizer
     ports:
