--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - /root/data-backup:/snapshot
       - /root/.ssh:/root/.ssh
     environment: 
-      - BACKUP_DIRECTORIES=root@164.90.182.3:/home/debian/   samba/snapshot
+      - BACKUP_DIRECTORIES=root@164.90.182.3:/home/debian     /snapshot
   
   visualizer:
     image: dockersamples/visualizer
