--- a/rsnapshot.config
+++ b/rsnapshot.config
@@ -249,5 +249,5 @@ lockfile	/var/run/rsnapshot.pid
 
 
 cmd_ssh	    /usr/bin/ssh
-backup      root@164.90.182.3:/home/debian/samba        snapshot/
+#backup      root@164.90.182.3:/home/debian/samba        snapshot/
 retain      weekly 4
